packages/transpiler/test/fixtures/errors/with-statement/input.ts
// @ts-nocheck
/**
 * @public
 */
export class WithStmt {
    public access(o: object): void {
        with (o) {
            // body
        }
    }
}
